--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
-  "scripts": {
-    "test": "mocha"
+  "name": "runner",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
   },
-  "devDependencies": {
-    "mocha": "^10.0.0"
+  "scripts": {
+    "start": "node index.js",
+    "test": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "mocha": "^6.2.2"
   }
 }
