--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "mocha": "^6.2.2"
+  "devDependencies": {
+    "mocha": "^10.0.0"
   }
 }
